# modules/customers.js
@@ -2,6 +2,7 @@ const bcrypt = require("bcrypt");
 const jwt = require("jsonwebtoken");
 const sequelize = require("../db/sequelize");
 const config = require("../config");
+const { where } = require("sequelize");
 
 exports.getCustomersByShopId = async (req, res) => {
   const { shopid } = req.params;
@@ -16,7 +17,9 @@ exports.getCustomersByShopId = async (req, res) => {
   if (req.shop?.id !== shopid) {
     return res.status(403).json({
       success: 0,
-      error: global.HTTP_CODE.FORBIDDEN + ": You are not authorized to view this shop's customers",
+      error:
+        global.HTTP_CODE.FORBIDDEN +
+        ": You are not authorized to view this shop's customers",
     });
   }
 
@@ -56,7 +59,9 @@ exports.getCustomerById = async (req, res) => {
   if (req.shop?.id !== shopid || req.user?.id !== id) {
     return res.status(403).json({
       success: 0,
-      error: global.HTTP_CODE.FORBIDDEN + ": You are not authorized to view this shop's customer",
+      error:
+        global.HTTP_CODE.FORBIDDEN +
+        ": You are not authorized to view this shop's customer",
     });
   }
 
@@ -86,8 +91,6 @@ exports.getCustomerById = async (req, res) => {
   }
 };
 
-
-
 exports.updateCustomer = async (req, res) => {
   const { id, shopid } = req.params;
   const { name, email, password, address, phone } = req.body;
@@ -103,13 +106,15 @@ exports.updateCustomer = async (req, res) => {
   if (req.shop?.id !== shopid || req.user?.id !== id) {
     return res.status(403).json({
       success: 0,
-      error: global.HTTP_CODE.FORBIDDEN + ": You are not authorized to update this shop's customer",
+      error:
+        global.HTTP_CODE.FORBIDDEN +
+        ": You are not authorized to update this shop's customer",
     });
   }
 
   try {
     const user = await sequelize.customers.findOne({
-      where: { id, shop_id: shopid, deleted: 0},
+      where: { id, shop_id: shopid, deleted: 0 },
     });
     if (!user) {
       return res.status(404).json({
@@ -118,10 +123,15 @@ exports.updateCustomer = async (req, res) => {
       });
     }
 
-    const hashedPassword = password ? await bcrypt.hash(password, 10) : user.password;
-   
+    const hashedPassword = password
+      ? await bcrypt.hash(password, 10)
+      : user.password;
 
-    await user.update({ name: name || user.name, email: email || user.email , password: hashedPassword || user.password });
+    await user.update({
+      name: name || user.name,
+      email: email || user.email,
+      password: hashedPassword || user.password,
+    });
 
     return res.status(200).json({
       success: 1,
@@ -151,17 +161,21 @@ exports.deleteCustomer = async (req, res) => {
   if (req.shop?.id !== shopid || req.user?.id !== id) {
     return res.status(403).json({
       success: 0,
-      error: global.HTTP_CODE.FORBIDDEN + ": You are not authorized to delete this shop's customer",
+      error:
+        global.HTTP_CODE.FORBIDDEN +
+        ": You are not authorized to delete this shop's customer",
     });
   }
 
   try {
-    const user = await sequelize.customers.update({
+    const user = await sequelize.customers.update(
+      {
         deleted: 1,
-        }, {
+      },
+      {
         where: { id, shop_id: shopid, deleted: 0 },
-    })
-
+      }
+    );
 
     //Check if user not exists
     if (!user) {
@@ -185,3 +199,263 @@ exports.deleteCustomer = async (req, res) => {
   }
 };
 
+exports.getCartByCustomerId = async (req, res) => {
+  const { id } = req.params;
+
+  if (!id) {
+    return res.status(404).json({
+      success: 0,
+      error: global.HTTP_CODE.NOT_FOUND + ": Customer ID is Required",
+    });
+  }
+
+  try {
+    const customer = await sequelize.customers.findOne({
+      where: {
+        id,
+      },
+    });
+
+    if (!customer) {
+      return res.status(404).json({
+        success: 0,
+        error: global.HTTP_CODE.NOT_FOUND + ": Customer Not Found",
+      });
+    }
+
+    return res.status(200).json({
+      success: 1,
+      error: null,
+      data: customer.cart,
+    });
+  } catch (error) {
+    console.error(error);
+    return res.status(500).json({
+      success: 0,
+      error: error.message,
+    });
+  }
+};
+
+/*
+  Request Body JSON
+  products : [
+      {
+        product_id : {id}
+        amount: {id} || 1
+        price: {price}
+      }
+    ]
+*/
+
+exports.addItemstoCartByCustomerId = async (req, res) => {
+  const { id } = req.params;
+  const { products } = req.body;
+
+  if (!id) {
+    return res.status(404).json({
+      success: 0,
+      error: global.HTTP_CODE.NOT_FOUND + ": Customer ID is Required",
+    });
+  }
+
+  if (!products) {
+    return res.status(404).json({
+      success: 0,
+      error: global.HTTP_CODE.NOT_FOUND + ": Products List is Required",
+    });
+  }
+
+  try {
+    let customer = await sequelize.customers.findOne({
+      where: {
+        id,
+      },
+    });
+
+    var cart = customer.cart;
+
+    if (!customer || !customer.cart) {
+      return res.status(404).json({
+        success: 0,
+        error: "Customer Not Found or Missing Cart",
+      });
+    }
+
+    //Before Add Cart Total
+
+    //After Cart total
+
+    for (const product of products) {
+      // TODO : 15 MAY 2024
+      //Make it check for duplicate product
+      //Increase Amount instead of add more product to a list
+      const existingProductIndex = cart.products.findIndex(
+        (cartProduct) => cartProduct.id === product.product_id
+      );
+
+      if (existingProductIndex !== -1) {
+        // Duplicate found! Update amount and total for existing product
+        cart.products[existingProductIndex].amount += product.amount;
+        cart.products[existingProductIndex].total =
+          cart.products[existingProductIndex].amount *
+          cart.products[existingProductIndex].price;
+      } else {
+        // No duplicate found, add product to cart normally
+        const productData = await sequelize.products.findOne({
+          where: {
+            id: product.product_id,
+          },
+        });
+
+        if (productData) {
+          let data = {
+            id: productData.id,
+            product_name: productData.name,
+            price: productData.price,
+            amount: product.amount,
+            total: product.amount * product.price,
+          };
+          cart.products.push(data);
+        }
+      }
+    }
+
+    // Calculate total in a separate loop
+    cart.payment.total = cart.products.reduce(
+      (accumulator, product) => accumulator + product.total,
+      0
+    );
+
+    const updateCustomer = await sequelize.customers.update(
+      {
+        cart,
+      },
+      {
+        where: {
+          id,
+        },
+      }
+    );
+
+    return res.status(200).json({
+      success: 1,
+      error: null,
+      data: cart,
+    });
+  } catch (e) {
+    console.error(e);
+    return res.status(500).json({
+      success: 0,
+      error: e.message,
+    });
+  }
+};
+
+// Data Type
+// cart : object
+exports.updateCartByCustomerId = async (req, res) => {
+  const { id } = req.params;
+  const { cart } = req.body;
+
+  if (!id) {
+    return res.status(404).json({
+      success: 0,
+      error: global.HTTP_CODE.NOT_FOUND + ": Customer ID is Required",
+    });
+  }
+
+  try {
+    const customer = await sequelize.customers.findOne({
+      where: {
+        id,
+      },
+    });
+
+    if (!customer) {
+      return res.status(404).json({
+        success: 0,
+        error: global.HTTP_CODE.NOT_FOUND + ": Customer Not Found",
+      });
+    }
+
+    const updatedCart = await sequelize.customers.update(
+      {
+        cart,
+      },
+      {
+        where: {
+          id,
+        },
+      }
+    );
+
+    return res.status(200).json({
+      success: 1,
+      error: null,
+      data: updatedCart,
+    });
+  } catch (e) {
+    console.error(e);
+    return res.status(500).json({
+      success: 0,
+      error: e.message,
+    });
+  }
+};
+
+exports.clearCartByCustomerId = async (req, res) => {
+  const { id } = req.params;
+
+  if (!id) {
+    return res.status(404).json({
+      success: 0,
+      error: global.HTTP_CODE.NOT_FOUND + ": Customer ID is Required",
+    });
+  }
+
+  try {
+    const customer = await sequelize.customers.findOne({
+      where: {
+        id,
+      },
+    });
+
+    if (!customer) {
+      return res.status(404).json({
+        success: 0,
+        error: global.HTTP_CODE.NOT_FOUND + ": Customer Not Found",
+      });
+    }
+
+    const clearedCart = await sequelize.customers.update(
+      {
+        cart: {
+          products: [],
+          payment: {
+            total: 0.0,
+            tax: 0.0,
+            currency: null,
+          },
+        },
+      },
+      {
+        where: {
+          id,
+        },
+      }
+    );
+
+    return res.status(200).json({
+      success: 1,
+      error: null,
+      data: clearedCart,
+    });
+  } catch (e) {
+    console.error(e);
+    return res.status(500).json({
+      success: 0,
+      error: e.message,
+    });
+  }
+};
